force-app/main/default/objects/FeatureFlagRule__c/FeatureFlagRule__c.object-meta.xml
<CustomObject>
    <description>Captures rules that apply to a feature flag to determine how the feature is enabled for users.</description>
    <label>Feature Flag Rule</label>
    <nameField>
        <label>Feature Flag Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Flag Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>