force-app/main/default/objects/FeatureFlagRule__c/fields/FeatureFlag__c.field-meta.xml
<CustomField>
    <fullName>FeatureFlag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The feature flag this feature flag rule relates to.</description>
    <label>Feature Flag</label>
    <referenceTo>FeatureFlag__c</referenceTo>
    <relationshipLabel>Feature Flag Rules</relationshipLabel>
    <relationshipName>FeatureFlagRules</relationshipName>
    <type>Lookup</type>
</CustomField>