force-app/main/default/objects/FeatureFlagRule__c/fields/IdType__c.field-meta.xml
<CustomField>
    <fullName>IdType__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOUSEHOLD_ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>