force-app/main/default/objects/FeatureFlagRule__c/fields/IdValue__c.field-meta.xml
<CustomField>
    <fullName>IdValue__c</fullName>
    <label>ID Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>