force-app/main/default/objects/FeatureFlagRule__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether this feature flag rule is currently active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>