force-app/main/default/objects/FeatureFlagRule__c/fields/RuleType__c.field-meta.xml
<CustomField>
    <fullName>RuleType__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIXED_ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>